# hydroconstruct

./: HydroConstruct  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  calcexchange.c  checkTransport.c  config.h  config.h.in  config.status  configure  configure.ac  configure_mac_bec  get2in1ROMScdfinputdata.c  getEccalFlatFormatData.c  getGuamData.c  getROMScdfinputdata.c  getROMScdftsinputdata.c  getaltinputdata.c  getcdfinputdata.c  getcdftsinputdata.c  getflatinputdata.c  getinputdata.c  mainexchange.c  mainexchange.h  padtimeseries.c  readnetcdf.c  unixUtils.c  unixUtils.h  writeoutput.c
Example/: SEAP_14052012_aea.bgm  SEAP_14052012_ll.bgm  construct  params_17July2012.prm
